RESOLVED FIXED33325
AX: contentEditable DIVs are not AX accessible
https://bugs.webkit.org/show_bug.cgi?id=33325
Summary AX: contentEditable DIVs are not AX accessible
chris fleizach
Reported 2010-01-07 09:27:07 PST
AX: contentEditable DIVs are not AX accessible
Attachments
Patch (4.95 KB, patch)
2010-01-07 09:27 PST, chris fleizach
bdakin: review+
chris fleizach
Comment 1 2010-01-07 09:27:42 PST
WebKit Review Bot
Comment 2 2010-01-07 09:31:14 PST
style-queue ran check-webkit-style on attachment 46059 [details] without any errors.
Beth Dakin
Comment 3 2010-01-07 12:20:04 PST
Comment on attachment 46059 [details] Patch r=me
chris fleizach
Comment 4 2010-01-07 12:25:13 PST
Eric Seidel (no email)
Comment 5 2010-01-12 04:05:22 PST
Attachment 46059 [details] was posted by a committer and has review+, assigning to Chris Fleizach for commit.
chris fleizach
Comment 6 2010-01-13 10:10:36 PST
already commited
Note You need to log in before you can comment on or make changes to this bug.