AX: contentEditable DIVs are not AX accessible https://bugs.webkit.org/show_bug.cgi?id=33325

Reviewed by Beth Dakin.

WebCore: 

Test: accessibility/contenteditable-hidden-div.html

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::accessibilityIsIgnored):
(WebCore::AccessibilityRenderObject::canSetValueAttribute):

LayoutTests: 

* accessibility/contenteditable-hidden-div-expected.txt: Added.
* accessibility/contenteditable-hidden-div.html: Added.



git-svn-id: svn://svn.chromium.org/blink/trunk@52941 bbb929c8-8fbe-4397-9dbb-9b2b20218538